refactor: replacing ArgumentCaptor by assertArg